Closes #369: Correct datasource documentation link alignment. (#394)

--- a/client/app/assets/less/redash/query.less
+++ b/client/app/assets/less/redash/query.less
@@ -455,6 +455,7 @@ edit-in-place p.editable:hover {
 
 .datasource-small {
   visibility: hidden;
+  display: none !important;
 }
 
 .query-fullscreen .query-metadata__mobile {
@@ -561,6 +562,7 @@ nav .rg-bottom {
 
   .datasource-small {
     visibility: visible;
+    display: inline-block !important;
   }
 
   .query-fullscreen {
